# DatabaseConnector

./: .gitignore  LICENSE  README.md
Source/: CMakeLists.txt
Source/CMake/: Project.cmake  UnitTest.cmake
Source/CMake/Modules/: FindMySQL.cmake
Source/CMake/Templates/: Database.rc.in  DatabasePluginOdbc.rc.in  DatabasePluginOdbcMsSql.rc.in  DatabasePluginOdbcMySql.rc.in
Source/Interface/: CMakeLists.txt
Source/Interface/Src/: Database.cpp  Database.h  DatabaseBlockGuard.h  DatabaseConnection.cpp  DatabaseConnection.h  DatabaseConsole.cpp  DatabaseConsole.h  DatabaseDate.cpp  DatabaseDate.h  DatabaseDateTime.cpp  DatabaseDateTime.h  DatabaseDateTimeHelper.cpp  DatabaseDateTimeHelper.h  DatabaseDateTimeSpan.cpp  DatabaseDateTimeSpan.h  DatabaseDynLib.cpp  DatabaseDynLib.h  DatabaseDynLibManager.cpp  DatabaseDynLibManager.h  DatabaseException.cpp  DatabaseException.h  DatabaseFactory.cpp  DatabaseFactory.h  DatabaseFactoryManager.cpp  DatabaseFactoryManager.h  DatabaseField.cpp  DatabaseField.h  DatabaseField.inl  DatabaseFieldInfos.cpp  DatabaseFieldInfos.h  DatabaseFieldValueInitializer.h  DatabaseFileUtils.cpp  DatabaseFileUtils.h  DatabaseFixedPoint.cpp  DatabaseFixedPoint.h  DatabaseFixedPoint.inl  DatabaseInt24.cpp  DatabaseInt24.h  DatabaseInt24.inl  DatabaseLogger.cpp  (+51 more)
Source/Interface/Src/Win32/: resource.h
Source/Plugin/: CMakeLists.txt
Source/Plugin/MySql/: CMakeLists.txt
Source/Plugin/MySql/Src/: DatabaseConnectionMySql.cpp  DatabaseConnectionMySql.h  DatabaseMySql.cpp  DatabaseMySql.h  DatabaseMySqlHelper.cpp  DatabaseMySqlHelper.h  DatabaseMySqlParameterBinding.h  DatabaseMySqlPch.cpp  DatabaseMySqlPch.h  DatabaseMySqlPrerequisites.h  DatabaseParameterMySql.cpp  DatabaseParameterMySql.h  DatabaseResultMySql.cpp  DatabaseResultMySql.h  DatabaseStatementMySql.cpp  DatabaseStatementMySql.h  DatabaseStatementParameterMySql.cpp  DatabaseStatementParameterMySql.h  DatabaseStatementParameterSetter.h  DllPluginDatabaseMySql.cpp  ExceptionDatabaseMySql.h  FactoryDatabaseMySql.cpp  FactoryDatabaseMySql.h  PluginDatabaseMySql.cpp  PluginDatabaseMySql.h
Source/Plugin/MySql/Src/Win32/: resource.h
Source/Plugin/Odbc/: CMakeLists.txt
Source/Plugin/Odbc/MsSql/: CMakeLists.txt
Source/Plugin/Odbc/MsSql/Src/: DatabaseConnectionOdbcMsSql.cpp  DatabaseOdbcMsSql.h  (+10 more)
Source/Plugin/Odbc/MySql/: CMakeLists.txt
Source/Plugin/Odbc/Src/: DatabaseConnectionOdbc.cpp  DatabaseConnectionOdbc.h  DatabaseOdbcHelper.cpp  DatabaseOdbcHelper.h  DatabaseOdbcParameterBinding.cpp  DatabaseOdbcParameterBinding.h  DatabaseOdbcPch.cpp  DatabaseOdbcPch.h  DatabaseOdbcPrerequisites.h  DatabaseParameterOdbc.cpp  DatabaseParameterOdbc.h  DatabaseQueryOdbc.cpp  DatabaseQueryOdbc.h  DatabaseQueryParameterOdbc.cpp  DatabaseQueryParameterOdbc.h  DatabaseResultOdbc.cpp  DatabaseResultOdbc.h  DatabaseStatementOdbc.cpp  DatabaseStatementOdbc.h  DatabaseStatementOdbcHelper.h  DatabaseStatementParameterOdbc.cpp  DatabaseStatementParameterOdbc.h  ExceptionDatabaseOdbc.h
Source/Plugin/PostgreSql/: CMakeLists.txt
Source/Plugin/PostgreSql/Src/: DatabaseConnectionPostgreSql.cpp  DatabaseConnectionPostgreSql.h  DatabaseParameterPostgreSql.cpp  DatabaseParameterPostgreSql.h  DatabasePostgreSql.cpp  DatabasePostgreSql.h  DatabasePostgreSqlHelper.cpp  DatabasePostgreSqlHelper.h  DatabasePostgreSqlParameterBinding.h  DatabasePostgreSqlPch.cpp  DatabasePostgreSqlPch.h  DatabasePostgreSqlPrerequisites.h  DatabaseStatementPostgreSql.cpp  DatabaseStatementPostgreSql.h  DllPluginDatabasePostgreSql.cpp  ExceptionDatabasePostgreSql.h  FactoryDatabasePostgreSql.cpp  FactoryDatabasePostgreSql.h  PluginDatabasePostgreSql.cpp  PluginDatabasePostgreSql.h
Source/Plugin/SQLite/: CMakeLists.txt
Source/Plugin/SQLite/Src/: DatabaseConnectionSqlite.cpp  DatabaseConnectionSqlite.h  DatabaseParameterSqlite.cpp  DatabaseParameterSqlite.h  DatabaseQueryParameterSqlite.cpp  DatabaseQueryParameterSqlite.h  DatabaseQuerySqlite.cpp  DatabaseQuerySqlite.h  DatabaseResultSqlite.cpp  DatabaseResultSqlite.h  DatabaseSqlite.cpp  DatabaseSqlite.h  DatabaseSqliteHelper.cpp  DatabaseSqliteHelper.h  DatabaseSqliteParameterBinding.h  DatabaseSqlitePch.cpp  DatabaseSqlitePch.h  DatabaseSqlitePrerequisites.h  DatabaseStatementParameterSetter.h  DatabaseStatementParameterSqlite.cpp  DatabaseStatementParameterSqlite.h  DatabaseStatementSqlite.cpp  DatabaseStatementSqlite.h  DllPluginDatabaseSqlite.cpp  ExceptionDatabaseSqlite.h  FactoryDatabaseSqlite.cpp  FactoryDatabaseSqlite.h  PluginDatabaseSqlite.cpp  PluginDatabaseSqlite.h  sqlite3.c  sqlite3.h  sqlite3ext.h
Source/Templates/: DatabasePluginMySql.rc.in  DatabasePluginOdbc.rc.in  DatabasePluginSqlite.rc.in  DatabaseTest.rc.in  DatabaseTestUtilities.h.in
Source/Test/: CMakeLists.txt
Source/Test/Scripts/: CreateDatabaseMsSql.bat  CreateDatabaseMySql.bat  CreateDatabaseMySql.sh  DeleteDatabaseMsSql.bat  DeleteDatabaseMySql.bat  DeleteDatabaseMySql.sh  InstallOdbc.bat  InstallOdbcMsSql.bat  InstallOdbcMySql.bat  InstallOdbcMySql.sh  UninstallOdbc.bat  UninstallOdbc.sh
Source/Test/Src/: DatabaseConnectionTest.cpp  DatabaseConnectionTest.h  DatabaseDateTest.cpp  DatabaseDateTest.h  DatabaseDateTimeTest.cpp  DatabaseDateTimeTest.h  DatabaseFieldInfosTest.cpp  DatabaseFieldInfosTest.h  DatabaseFieldTest.cpp  DatabaseFieldTest.h  DatabaseFixedPointTest.cpp  DatabaseFixedPointTest.h  DatabaseInt24Test.cpp  DatabaseInt24Test.h  DatabaseInterfaceTest.cpp  DatabaseInterfaceTest.h  DatabaseMySqlTest.cpp  DatabaseMySqlTest.h  DatabaseNullableTest.cpp  DatabaseNullableTest.h  DatabaseOdbcMsSqlTest.cpp  DatabaseOdbcMsSqlTest.h  DatabaseOdbcMySqlTest.cpp  DatabaseOdbcMySqlTest.h  DatabaseParameterTest.cpp  DatabaseParameterTest.h  DatabasePostgreSqlTest.cpp  DatabasePostgreSqlTest.h  DatabaseQueryTest.cpp  DatabaseQueryTest.h  DatabaseResultTest.cpp  DatabaseResultTest.h  DatabaseRowTest.cpp  DatabaseRowTest.h  DatabaseSqliteTest.cpp  DatabaseSqliteTest.h  DatabaseStatementTest.cpp  DatabaseStatementTest.h  DatabaseStringUtilsTest.cpp  DatabaseStringUtilsTest.h  (+31 more)
Source/Test/Src/Win32/: resource.h
(+34 files in other folders)
