option( BUILD_MySQLConnPP_PLUGIN "Build MySQL Connector C++ plugin" TRUE )
option( BUILD_ODBC_PLUGIN "Build ODBC plugin" TRUE )
option( BUILD_SQLite_PLUGIN "Build SQLite plugin" TRUE )

function( PluginInit )
	set( MySql "no (Not wanted)" PARENT_SCOPE )
	set( Odbc "no (Not wanted)" PARENT_SCOPE )
	set( Sqlite "no (Not wanted)" PARENT_SCOPE )
endfunction( PluginInit )

function( PluginBuild )
	if( ${BUILD_MySQLConnPP_PLUGIN} )
        find_package( MySQL )
        if( MYSQL_FOUND )
            set( Build ${MySql} )
            add_subdirectory( Plugin/MySql )
            set( MySql ${Build} PARENT_SCOPE )
        else()
            set( MySql "no (missing MySQL connector C++ library" PARENT_SCOPE )
        endif()
	endif()
    if( ${BUILD_ODBC_PLUGIN} )
        find_package( ODBC )
        if( ODBC_FOUND )
            set( Build ${Odbc} )
            add_subdirectory( Plugin/Odbc )
            set( Odbc ${Build} PARENT_SCOPE )
        else()
            set( Odbc "no (missing ODBC library" PARENT_SCOPE )
        endif()
    endif()
    if( ${BUILD_SQLite_PLUGIN} )
		set( Build ${Sqlite} )
		add_subdirectory( Plugin/SQLite )
		set( Sqlite ${Build} PARENT_SCOPE )
    endif()
endfunction( PluginBuild )

function( PluginSummary msg )
	set( msg_tmp "\n\nPlugins :" )
	set( msg_tmp "${msg_tmp}\n    MySQL Connector C++   ${MySql}" )
	set( msg_tmp "${msg_tmp}\n    ODBC                  ${Odbc}" )
	set( msg_tmp "${msg_tmp}\n    SQLite                ${Sqlite}" )
	SET( msg "${msg}${msg_tmp}" PARENT_SCOPE )
endfunction( PluginSummary )
